# workout-buddy

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json
.github/: pre-build.sh
.github/scripts/: pre-build.sh
.github/workflows/: build-and-release-rust.yml
src/: analysis.rs  main.rs  models.rs  system_prompt.txt  utils.rs
