[package]
name = "workout_buddy"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
image = "0.25.6"
notify-rust = "4.11.7"
reqwest = { version = "0.12.22", features = ["json"] }
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }
xcap = "0.6.1"
